<!--
  ~ Copyright 2020 Andrey Tolpeev
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">TeamCityApp</string>

    <!--drawer items-->
    <string name="home_drawer_item">Home</string>
    <string name="projects_drawer_item">Projects</string>
    <string name="favorites_drawer_item">Favorites</string>
    <string name="running_builds_drawer_item">Running builds</string>
    <string name="build_queue_drawer_item">Build queue</string>

    <!--Home navigation-->
    <string name="home_navigation_builds">Builds</string>
    <string name="home_navigation_queue">Queue</string>

    <!--Activity titles-->
    <string name="title_activity_build_list">Builds</string>
    <string name="title_activity_build">Build</string>

    <!--Build tabs-->
    <string name="tab_overview">Overview</string>
    <string name="tab_changes">Changes</string>
    <string name="tab_tests">Tests</string>
    <string name="tab_build_log">Build Log</string>
    <string name="tab_artifacts">Artifacts</string>
    <string name="tab_parameters">Parameters</string>
    <string name="tab_snapshot_dependencies">Snapshot dependencies</string>

    <!--progress creating new account dialog-->
    <string name="progress_dialog_content">Please wait…</string>

    <!--create new account dialog-->

    <!--Download artifact dialog -->
    <string name="download_artifact_dialog_title">Downloading artifact file..</string>
    <string name="text_cancel_button">Cancel</string>

    <!--Download artifact retry snack-->
    <string name="download_artifact_retry_snack_bar_text">We\'ve got problem downloading an artifact</string>
    <string name="download_artifact_retry_snack_bar_retry_button">Retry</string>

    <!--Retry load more snack-->
    <string name="load_more_retry_snack_bar_text">Error loading more data</string>

    <!--Empty list messages-->
    <string name="empty_list_message_artifacts">No artifacts</string>
    <string name="empty_list_message_builds">No builds</string>
    <string name="empty_list_message_running_builds">No running builds</string>
    <string name="empty_list_message_favorite_running_builds">No favorite running builds</string>
    <string name="empty_list_message_build_queue">Builds queue is empty</string>
    <string name="empty_list_message_favorite_build_queue">Favorite builds queue is empty</string>
    <string name="empty_list_message_projects_or_build_types">No projects or build configurations</string>
    <string name="empty_list_message_favorites">No favorite configurations added</string>

    <!--Build elements-->
    <string name="unknown_trigger_type_text">Unknown trigger type!</string>
    <string name="triggered_deleted_user_text">Deleted user</string>
    <string name="triggered_deleted_configuration_text">Deleted configuration</string>
    <string name="build_result_section_text">Result</string>
    <string name="build_wait_reason_section_text">Wait reason</string>
    <string name="build_time_section_text">Time</string>
    <string name="build_queued_time_section_text">Queued time</string>
    <string name="build_time_to_start_section_text">Time to start</string>
    <string name="build_branch_section_text">Branch</string>
    <string name="build_agent_section_text">Agent</string>
    <string name="build_triggered_by_section_text">Triggered by</string>
    <string name="build_restarted_by_section_text">Restarted by</string>
    <string name="build_canceled_by_text">Canceled by</string>
    <string name="build_cancellation_time_text">Cancellation time</string>
    <string name="build_personal_text">Personal of</string>
    <string name="build_type_by_section_text">Configuration</string>
    <string name="build_project_by_section_text">Project</string>

    <!--Artifact-->
    <!--bottom sheet menu-->
    <!--permissions dialog-->
    <string name="permissions_dialog_title">Permissions warning</string>
    <string name="permissions_dialog_content">In order to download artifact the app requires to have WRITE_EXTERNAL_STORAGE permissions granted.</string>
    <string name="permissions_install_packages_dialog_content">In order to install apk files the app requires to have install unknown apps permissions enabled.</string>
    <string name="permissions_dialog_text_no_permissions">The download artifacts functionality is disabled. Please enable required permissions.</string>

    <!--Build element-->
    <string name="build_element_copy_text">Text copied!</string>

    <!--Create account values-->
    <string name="server_no_such_server">No TeamCity server associated with hostname</string>
    <string name="server_correct_url">Please provide correct server url</string>
    <string name="server_not_secure_http">Using http is insecure and it\'s recommend to use https instead. Use your favorite search engine to get more information about this topic.</string>

    <!--Tests-->

    <!--Testing-->
    <string name="navigate_up">Navigate up</string>

    <!--Build log-->

    <!--Login activity-->
    <string name="text_try_it_out_button">Try it out</string>

    <!--Run build activity-->
    <string name="title_run_build">Run build</string>
    <string name="text_restarting_build">Restarting build..</string>
    <string name="text_opening_build">Opening build..</string>
    <string name="text_build_is_run">Build is added to build queue</string>
    <string name="error_opening_build">We encountered problem opening build</string>
    <string name="text_show_build">Show</string>

    <!--Build details activity-->
    <string name="text_stopping_build">Stopping build..</string>
    <string name="text_removing_build_from_queue">Removing build from queue..</string>
    <string name="text_build_is_stopped">Build is stopped successfully</string>
    <string name="text_build_is_removed_from_queue">Build is removed from queue successfully</string>
    <string name="text_build_is_restarted">Build is restarted successfully</string>
    <string name="error_base_stop_build_error">We encountered problem stopping build</string>
    <string name="error_base_remove_build_from_queue_error">We encountered problem removing build from queue</string>
    <string name="error_base_restart_build_error">We encountered problem restarting build</string>
    <string name="error_stop_build_forbidden_error">You don\'t have permissions to stop a build</string>
    <string name="error_remove_build_from_queue_forbidden_error">You don\'t have permissions to remove a build from queue</string>
    <string name="error_restart_build_forbidden_error">You don\'t have permissions to restart a build</string>
    <string name="text_restart_button">Restart</string>
    <string name="text_stop_button">Stop</string>
    <string name="text_remove_from_queue_button">Remove from queue</string>
    <string name="text_restart_the_build">You are about to restart the build with the same parameters. Are you sure?</string>
    <string name="text_stop_the_build">You are about to stop the build. Are you sure?</string>
    <string name="text_remove_build_from_queue">You are about to remove the build from queue. Are you sure?</string>
    <string name="text_stop_the_build_2">You are about to stop the build ran not by you. Are you sure?</string>
    <string name="text_remove_build_from_queue_2">You are about to remove the build from queue triggered not by you. Are you sure?</string>
    <string name="text_menu_remove_build_from_queue">Remove from queue</string>
    <string name="text_menu_stop_build">Stop</string>
    <string name="text_menu_share_build">Share</string>
    <string name="text_menu_open_browser">Open in browser</string>
    <string name="text_menu_restart_build">Restart</string>
    <string name="text_share_build">Share build details</string>
    <string name="text_re_add_build">Re-add build to the queue</string>

    <!--Build list activity-->
    <string name="text_menu_filter_builds">Filter builds</string>
    <string name="text_menu_add_to_favorites">Add to favorites</string>
    <string name="text_menu_remove_from_favorites">Remove from favorites</string>
    <string name="text_filters_applied">Build filters have been applied</string>
    <string name="text_agents_filters_applied">Agents filters have been applied</string>
    <string name="text_queued_header">Queued</string>
    <string name="text_snackbar_button_reset_filters">Reset filters</string>
    <string name="text_add_to_favorites">The configuration has been added to favorites</string>
    <string name="text_remove_from_favorites">The configuration has been removed from favorites</string>
    <string name="text_view_favorites">Open favorites</string>

    <!--Filter builds activity-->
    <string name="title_filter_builds">Filter builds</string>

    <!--Onboarding-->
    <string name="title_onboarding_navigation_drawer">Explore navigation drawer</string>
    <string name="text_onboarding_navigation_drawer">Manage your accounts and control theme settings</string>
    <string name="title_onboarding_run_build">Run builds</string>
    <string name="text_onboarding_run_build">Choose a branch, an agent or even provide custom parameters</string>
    <string name="title_onboarding_filter_builds">Filter builds</string>
    <string name="text_onboarding_filter_builds">Filter by branch, build status or show only personal or pinned ones</string>
    <string name="title_onboarding_build_menu">Explore menu</string>
    <string name="text_onboarding_stop_build">Stop, share or open running builds in a browser</string>
    <string name="text_onboarding_restart_build">Restart, share or open finished builds in a browser</string>
    <string name="text_onboarding_remove_build_from_queue">Remove from queue, share or open builds in a browser</string>
    <string name="title_onboarding_add_fav">Add to favorites</string>
    <string name="text_onboarding_add_fav">Add configurations to favorites to able manage them in one place</string>
    <string name="title_onboarding_filter">Filter running builds</string>
    <string name="title_onboarding_filter_queued">Filter queued builds</string>
    <string name="title_onboarding_filter_agents">Filter agents</string>
    <string name="text_onboarding_filter">Filter builds by only your favorite configurations or show all running ones. Default filter is set to show only builds by your favorite configurations.</string>
    <string name="text_onboarding_filter_queued">Filter builds by only your favorite configurations or show all queued ones. Default filter is set to show only builds by your favorite configurations.</string>
    <string name="text_onboarding_filter_agents">Filter agents by connected or disconnected ones. Default filter is set to show only connected agents.</string>

    <!--Favorites-->
    <string name="text_info_add">Add a configuration to favorites for an easy access</string>
    <string name="text_info_add_action">Add projects</string>

    <!--Rate-->

    <!--Filter bottom sheet-->


</resources>
